--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,10 @@
           <h1 class="section-title mt-4">About Me</h1>
           <p class="introduction mt-1">
             I'm a graduate student in Computer Science at the <strong>University of California, Davis</strong> advised
-            by Professor <a href='https://muhaochen.github.io'>Muhao Chen</a>.
+            by Professor <a href='https://muhaochen.github.io'>Muhao Chen</a>. My research is focused on <em>(1)</em> Using data-driven approaches to increase Large Language Model performance and interpretability in various use cases; 
+            <em>(2)</em> Augmenting Large Language Model robustness, fairness and security; 
+            <em>(3)</em> Using Large Language Models for social good.
+            Aside from my PhD I have been a summer Machine Learning intern at Comcast (twice) and at Pinterest. 
           </p>
           <h1 class="section-title mt-4">News</h1>
           <!--(bake /src/news.html)-->
